force-app/main/default/objects/Contact/fields/Portal_Role__c.field-meta.xml
<CustomField>
    <fullName>Portal_Role__c</fullName>
    <label>Portal Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>DEALER_ADMIN</fullName><default>false</default><label>Dealer Admin</label></value>
            <value><fullName>DEALER_USER</fullName><default>true</default><label>Dealer User</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>