force-app/main/default/objects/Contact/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <label>Portal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ACTIVE</fullName><default>true</default><label>Active</label></value>
            <value><fullName>INACTIVE</fullName><default>false</default><label>Inactive</label></value>
            <value><fullName>LOCKED</fullName><default>false</default><label>Locked</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>