force-app/main/default/objects/Contact/fields/Portal_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Portal User ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>